objects/TSMC_Agreement__c.object
<CustomObject>
    <description>object which will store all TSMC approval agreements.</description>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TSMC_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TSMC_Agreements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Job_Description__c</fullName>
        <label>Detailed Job Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Tool_IP_Name__c</fullName>
        <label>EDA Tool/IP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(User__c)) , User__r.IsActive), 
&quot;Active&quot;,
IF(AND(NOT(ISBLANK(User__c)) , NOT(User__r.IsActive)),
     &quot;Inactive&quot;, &quot;&quot;)
)</formula>
        <label>Employee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Sales_AE__c</fullName>
        <inlineHelpText>For EDA Purpose Request at 7nm, N7+, 12nm, 5nm only.</inlineHelpText>
        <label>Field(Sales/AE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Policy__c</fullName>
        <label>IT Policy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TSMC_Agreements6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Site__c</fullName>
        <label>Physical Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permitted_Purpose__c</fullName>
        <label>Permitted Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Node__c</fullName>
        <label>Process Node</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Purpose__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7nm</fullName>
                </value>
                <value>
                    <fullName>10nm</fullName>
                </value>
                <value>
                    <fullName>12nm</fullName>
                </value>
                <value>
                    <fullName>16nm</fullName>
                </value>
                <value>
                    <fullName>N7+</fullName>
                </value>
                <value>
                    <fullName>5nm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDA</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Comment__c</fullName>
        <label>Reject Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TSMC_Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_On__c</fullName>
        <label>Rejected On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TSMC_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_On__c</fullName>
        <label>Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending For Approval</fullName>
                </value>
                <value>
                    <fullName>Out For Signature</fullName>
                </value>
                <value>
                    <fullName>Fully Signed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product development</fullName>
                </value>
                <value>
                    <fullName>Customer support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>User.Employee_Type__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>User.Employment_Status__c</field>
                <operation>equals</operation>
                <value>Available</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TSMC_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TSMC Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_TSMC_EDA_Requests</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Purpose__c</field>
            <operation>equals</operation>
            <value>EDA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <label>All TSMC EDA Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TSMC_IP_Requests</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Purpose__c</field>
            <operation>equals</operation>
            <value>IP</value>
        </filters>
        <label>All TSMC IP Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <label>TSMC Requests Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSMC_Request</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending For Approval</value>
        </filters>
        <label>TSMC Requests Pending For Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSMC_Request_Out_For_Signatures</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Out For Signature</value>
        </filters>
        <label>TSMC Requests Out For Signature</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSMC_Requests</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>TSMC Requests Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSMC_Requests_By_Employee_Email</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Email__c</field>
            <operation>equals</operation>
            <value>xyz@cadence.com</value>
        </filters>
        <label>TSMC Requests By Employee Email</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSMC_Requests_Fully_Signed</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fully Signed</value>
        </filters>
        <label>TSMC Requests Fully Signed</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSMC_Requests_Not_Submitted</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Purpose__c</columns>
        <columns>Process_Node__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TSMC_Agreement__c.Detail</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted</value>
        </filters>
        <label>TSMC Requests Not Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>TSMC_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TSMC-{00000000}</displayFormat>
        <label>Acknowledgement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TSMC Request</pluralLabel>
    <recordTypes>
        <fullName>Detail</fullName>
        <active>true</active>
        <label>Detail</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Sales_AE_Field_EDA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name &lt;&gt; &apos;Integration&apos;), NOT(ISPICKVAL(Field_Sales_AE__c , &apos;Yes&apos;)),NOT(ISPICKVAL(Field_Sales_AE__c , &apos;No&apos;)) , (TEXT(Purpose__c) == &apos;EDA&apos;) , OR(ISPICKVAL(Process_Node__c , &apos;7nm&apos;),ISPICKVAL( Process_Node__c , &apos;5nm&apos;),ISPICKVAL(Process_Node__c , &apos;N7+&apos;), ISPICKVAL(Process_Node__c , &apos;12nm&apos;)))</errorConditionFormula>
        <errorMessage>Field (Sales/AE) is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_AE_Field_IP</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Field_Sales_AE__c , &apos;Yes&apos;),ISPICKVAL(Field_Sales_AE__c , &apos;No&apos;)) , (TEXT(Purpose__c) == &apos;IP&apos;), $Profile.Name &lt;&gt; &apos;Integration&apos;)</errorConditionFormula>
        <errorMessage>Field (Sales/AE) is not applicable for IP Purpose</errorMessage>
    </validationRules>
</CustomObject>